DROOLS-5578: Kie Server uses obselete/to be deleted Java APIs (#2199)
* https://issues.redhat.com/browse/DROOLS-5578

Kie Server uses obselete/to be deleted Java APIs
Automated fix to Java9
https://j2eeguys.com/updater/index.html

Signed-off-by: Steve Davidson <steve@j2eeguys.com>

* https://issues.redhat.com/browse/DROOLS-5578

Kie Server uses obselete/to be deleted Java APIs
Automated updates to Java9
https://j2eeguys.com/updater
Additional BigDecimal updates

Signed-off-by: Steve Davidson <steve@j2eeguys.com>